# necessary-and-unnecessary-tiles

./: .gitignore  CMakeLists.txt  Makefile  README.ja.md  README.md  calsht_dw.cpp  calsht_dw.hpp  mkind2.cpp  prob.cpp  result.txt  sample.cpp  setup.py
.github/workflows/: ci.yml
example/: example.cpp
include/mahjong/: calsht_dw.hpp
src/: calsht_dw.cpp  calsht_dw.hpp  mkind.cpp  mkind2.cpp  python.cpp  sample.cpp
